<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">MyBurgerLab</string>
    <string name="enter_btn_txt">Enter</string>
    <string name="close">Close</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="clear_order">Clear Order</string>
    <string name="descriptions">Descriptions</string>
    <string name="not_available">Not Available</string>
    <string name="addon">Add On</string>
    <string name="cooking">Cooking Instructions</string>
    <string name="energy">Energy : </string>
    <string name="price">Price : </string>
    <string name="total_price">Price</string>
    <string name="order">Add to Order</string>
    <string name="remove">Remove</string>
    <string name="select">Select</string>
    <string name="quantity">Quantity :</string>
    <string name="total">Total</string>
    <string name="cal">cal</string>
    <string name="currency">Rs</string>
    <string name="item_status">Item Status</string>
    <string name="items">Items            : </string>
    <string name="submit_order">Submit Order</string>
    <string name="suggestion_notice">We Noticed...</string>
    <string name="suggestion_yes">YES PLEASE</string>
    <string name="suggestion_no">NO THANKS</string>
    <string name="items_count">Items</string>
    <string name="summery">Summary</string>
    <string name="categories"> Browse Categories</string>
    <string name="categories_header">Categories</string>
    <string name="status_pending">Pending</string>
    <string name="orders">Orders</string>
    <string name="price_text">PRICE</string>
    <string name="my_orders">My Orders</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="sent_orders">Sent Orders</string>
    <string name="confirmed_orders">My Sent Orders</string>
    <string name="change_order">Change Order</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="forget">Did you forget?</string>
    <string name="back">BACK</string>
    <string name="back_settings">Back</string>
    <string name="exit_app">Exit Application</string>
    <string name="change_waiter">Change Waiter</string>
    <string name="menu">MENU</string>
    <string name="suggestions_continue">Continue to Submit Order</string>
    <string name="refresh">Refresh Order</string>
    <string name="logged_into_server">Successfully Logged into server</string>
    <string name="logged_into_device">Successfully Logged into device</string>
    <string name="logging_to_server_failed">Failed to Logged into server</string>
    <string name="logging_to_device_failed">Failed to Logged into device</string>
    <string name="device_not_found">Device not found on the server, please add the device</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="more_sizes">And More ..</string>
    <string name="print">Print</string>

    <!-- string arrays -->
    <string-array name="portion_sizes">
        <item>Small Rs.000</item>
        <item>Regular Rs.000</item>
        <item>Large Rs.000</item>
    </string-array>

    <!-- strings for Language Names -->
    <string name="lang_uk">English (UK)</string>
    <string name="lang_ch">Chinese</string>
    <string name="lang_en">English (US)</string>
    <string name="lang_fr">French</string>

    <!-- strings for messages -->
    <string name="welcome">Welcome to Cafe</string>
    <string name="select_lang">Select Your Language</string>
    <string name="message_lang">By selecting a language you accept terms and conditions</string>
    <string name="welcome_authentication">Waiter Authentication</string>
    <string name="welcome_setTable">Set the Table No.</string>
    <string name="welcome_setDevice">Set the Device Name</string>
    <string name="welcome_settings">Settings Menu</string>
    <string name="copyrights">2014 IronOne Technologies | All rights reserved.</string>
    <string name="info_on_price">This total can be subjected to other restaurant charges.</string>
    <string name="message">Please Check the details of your order carefully and then select delivery options to proceed</string>
    <string name="suggestion_message_begin">You did not order any </string>
    <string name="suggestion_message_end">Would you like to order now?</string>
    <string name="confirm_submit_message">Are you sure you want to submit the orders?</string>
    <string name="confirm_clear_orders">Are You sure you want to clear all the orders?</string>
    <string name="clear_order_success">Successfully deleted order data</string>
    <string name="clear_order_fail">Failed to clear order data</string>
    <string name="exit_confirmation">Are you sure you want to exit ?</string>
    <string name="submit_empty_order_message">Add some items to order before submit</string>
    <string name="set_device_name_succesfully">Successfully set the Device Name</string>
    <string name="error_sending_order">An error ocured while sending order. Please contact waiter.</string>
    <string name="not_authorized_to_refresh">You are not authorized to refresh orders. Please login.</string>
    <string name="not_authorized_to_submit">You are not authorized to submit orders. Please login.</string>
    <string name="connecting_to_server">Connecting to Server...</string>
    <string name="offlineLogin">Failed to connect server. Trying Offline login...</string>
    <string name="try_again_to_submit">Retrying to submit order...</string>
    <string name="sending_order">Sending Order...</string>
    <string name="no_wifi_connection_error">No WIFI connection found. Please enable WIFI..</string>

    <!-- strings for settings -->
    <string name="table_no">Table No</string>
    <string name="device_name">Device Name</string>
    <string name="waiter_id">Waiter ID :</string>
    <string name="access_code">Access Code :</string>
    <string name="set_table_no">Set Table No</string>
    <string name="set_device_name">Set Device Name</string>
    <string name="clear_orders">Clear Orders</string>
    <string name="sync_menu">Synchronize Menu</string>
    <string name="sync_other">Synchronize Other Data</string>
    <string name="settings_title">Settings</string>

    <!-- strings for errors -->
    <string name="error_waiterID">Please enter the Waiter ID!</string>
    <string name="error_accessCode">Please enter the Access Code!</string>
    <string name="error_tableNo">Please enter the Table No!</string>
    <string name="error_deviceName">Please enter the Device Name!</string>
    <string name="error_bluetooth">No Blue Tooth Compatibility. Can not set the Device Name</string>
    <string name="inncorrect_username_password">Username or password you entered is incorrect</string>

    <!-- strings for action titles -->
    <string name="select_language">Select Language</string>
    <string name="mainmenu">Select Category</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_order">My Order</string>
    <string name="my_sent_order">My Sent Order</string>
    <string name="select_item">Select Item</string>

    <!-- strings for header menu items -->
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="title_activity_passcode">Passcode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- strings for print items -->
    <string name="blutooth_adaptor_not_found">Bluetooth Adaptor Not found</string>
    <string name="toast_bt_na">bluetooth is not available</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth print.</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices....</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="warn_timeout">Connection is not available.\nData sending is cancelled.</string>
    <string name="title_activity_print_view">PrintViewActivity</string>
    <string name="title_activity_print_preview">PrintPreview</string>

</resources>