<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"    
    android:background="@drawable/backgroundlogo"
    android:orientation="vertical"
    tools:context=".PasscodeActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="30dp"
        android:visibility="invisible"
        android:src="@drawable/logoimage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:layout_marginTop="-150dp"
        android:padding="35dp" >
        
        <TextView
                android:id="@+id/welcomeTextPasscode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                android:text="@string/welcome_authentication"
                android:textColor="@color/login_welcomeText_login"
                android:textSize="30dp"
                android:textStyle="bold" />

        <!-- The text view for the error message -->

        <TextView
            android:id="@+id/errorPasscode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/red_rectangle_button"
            android:gravity="center"
            android:padding="20dp"
            android:textColor="@color/login_error"
            android:textSize="14dp"
            android:visibility="gone" />

        <LinearLayout
           android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- The text label for Waiter ID -->

            <TextView
                android:id="@+id/waiterIdPasscode"
                android:layout_width="450dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:gravity="right"
                android:text="@string/waiter_id"
                android:textSize="20dp" />
            <!-- The text view for the error message -->

            <TextView
                android:id="@+id/txtwaiterIdPasscode"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                 >

                
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <!-- The text view for the access code -->

            <TextView
                android:id="@+id/accesCodePasscode"
                android:layout_width="450dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:gravity="right"
                android:text="@string/access_code"
                android:textSize="20dp" />
            <!-- The text field for the access code -->

            <EditText
                android:id="@+id/txtAccessCodePasscode"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/roundedtextfield"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/login_txtwaiterId" >
            </EditText>           

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical" >

            <!-- The button for submit -->

            <Button
                android:id="@+id/btn_login_submit"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="605dp"
                android:background="@drawable/green_round_button"
                android:gravity="center"
                android:onClick="onSubmitClick"
                android:text="@string/submit"
                android:textSize="17dp"
                android:textColor="@color/devicename_btn"
                android:textStyle="bold" />

            <!-- The button for cancel -->

            <Button
                android:id="@+id/btn_login_cancel"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/orange_round_button"
                android:gravity="center"
                android:onClick="onCancelClick"
                android:text="@string/cancel"
                android:textSize="17dp"
                android:textColor="@color/devicename_btn"
                android:textStyle="bold" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/linearLayoutForLoadingIconPasscode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal" >

            <ProgressBar
                android:id="@+id/progressBarConnectingToServerPasscode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txtConnectingToServerPasscode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/connecting_to_server"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessagePasscode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="50dp"
        android:text="@string/copyrights"
        android:textColor="@color/login_message_lang"
        android:textSize="12dp" />

</LinearLayout>